# VSCode-Config

./: GlobalSetting.json  README.md  SSH Keeplive.py  SyncSetting.txt  export_setting.json
C_Cpp/C++_Project_Example/: build.bat
C_Cpp/C-C++_SimpleFile_Example/: c_test.c  cpp_test.cpp
C_Cpp/C_Project_Example/: CMakeLists.txt  build.bat
C_Cpp/C_Project_Example/source/: test.c
Help/Docs/: B站教程.txt  Readme.txt  VSCode-Git.docx
Python/Python_Project_Example/source/: main.py
Python/Python_SimpleFile_Example/: demo.py
Templates/C-Cpp/C-Cpp_SimpleFile_Example/: c_test.c  cpp_test.cpp  head.h  test.cpp
Templates/C-Cpp/C_Project_Example/source/: test.c
Templates/C-Cpp/Cpp_Project_Example/: build.bat
Templates/C-Cpp/Cpp_Project_Example/source/: main.cpp
Workspace/: Arduino.code-workspace  Python.code-workspace  c-c++.code-workspace  c-cpp_simplefile.code-workspace
Workspace_old/: Python.code-workspace  c-c++.code-workspace  c-cpp_simplefile.code-workspace
